python-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, PATCH, OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: backend
  namespace: python-app
spec:
  rules:
  - host: example
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 5000
        path: /
        pathType: Prefix
